Fixed sections to ensure legibility

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,6 +30,7 @@
 .navbar-links a {
     text-decoration: none;
     color: #fff;
+    font-size: 24px;
 }
 
 .navbar-links ul {
@@ -44,7 +45,7 @@
 .navbar button {
     width: 100px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     background-color: #da4ea2;
     color: white;
     border: none;
